--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URI=mongodb://localhost:27017/rateguard
 JWT_SECRET=supersecretjwtkey123
-GEMINI_API_KEY=AIzaSyBJj3BVfsR5FcU4y3fYyisL2jUX3rWpOZQ
+GEMINI_API_KEY=AIzaSyCkyrVC84Sn3nKR8vcvI1m_Zr3sSZxN63s
+# GEMINI_API_KEY=AIzaSyBJj3BVfsR5FcU4y3fYyisL2jUX3rWpOZQ
 
 
